--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ Cảm ơn bạn đã quan tâm, chúc một ngày nhiều cảm hứng và ít b
                 
                 <div class="flex flex-col md:flex-row justify-center items-center gap-6">
                     <!-- Email Button -->
-                    <a href="mailto:emailcuaban@example.com" class="px-8 py-3 bg-white text-blue-600 text-lg font-semibold rounded-full hover:bg-gray-100 transition duration-300 shadow-xl transform hover:scale-105 flex items-center justify-center">
+                    <a href="mailto:emcute2101@gmail.com" class="px-8 py-3 bg-white text-blue-600 text-lg font-semibold rounded-full hover:bg-gray-100 transition duration-300 shadow-xl transform hover:scale-105 flex items-center justify-center">
                         <svg class="w-6 h-6 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8m-2 4v7a2 2 0 01-2 2H5a2 2 0 01-2-2v-7"></path></svg>
                         Gửi Email cho tôi
                     </a>
