--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         Thành Lộc
                     </h1>
                     <p class="text-2xl sm:text-3xl font-light text-blue-600 mb-8">
-                        Nhà phát triển Web | Người sáng tạo nội dung số
+                        Nhà phát triển Web, App | Người sáng tạo nội dung số
                     </p>
                     <a href="#projects" class="inline-block px-8 py-3 bg-blue-600 text-white text-lg font-semibold rounded-full hover:bg-blue-700 transition duration-500 shadow-xl transform hover:scale-105">
                         Xem Dự án
